# sfontplayer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  log.txt  log_eventlen.txt  log_lov.txt
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test_coverage.yml
src/: audio.rs  audiosynth.rs  data.rs  gui.rs  main.rs  midi_inspector.rs  player.rs  state.rs  workspace.rs
src/assets/: demo.mid
src/audio/: bufferedmidisource.rs  error.rs  midisource.rs  realtimemidisource.rs
src/data/: font_meta.rs  midi_meta.rs
src/gui/: about.rs  actions.rs  conversions.rs  cooltoolbar.rs  custom_controls.rs  file_dialogs.rs  fonts.rs  hotkeys.rs  keyboard_shortcuts.rs  midi_inspector.rs  playback_controls.rs  playlist_fonts.rs  playlist_songs.rs  songs.rs  soundfont_library.rs  tabs.rs  workspace_select.rs
src/gui/midi_inspector/: event_browser.rs  midi_renderer.rs  mod.rs  preset_mapper.rs
src/gui/modals/: about_modal.rs  file_dialogs.rs  mod.rs  settings.rs  shortcuts.rs
src/player/: audio.rs  enums.rs  error.rs  font_library.rs  mediacontrols.rs  playlist.rs  serialize_player.rs  soundfont_library.rs  soundfont_list.rs  workspace.rs
src/player/audio/: error.rs  midisequencer.rs  midisource.rs  midisynth.rs  mod.rs  sequencer.rs
src/player/midi_inspector/: midi_renderer.rs  mod.rs  preset_mapper.rs
src/player/playlist/: enums.rs  error.rs  font_meta.rs  midi_meta.rs  mod.rs  serialize_playlist.rs
src/player/workspace/: enums.rs  error.rs  font_meta.rs  midi_meta.rs  serialize.rs  serialize_workspace.rs
src/workspace/: font_meta.rs  midi_meta.rs
