[package]
name = "sfontplayer"
version = "0.10.0"
edition = "2021"
repository = "https://github.com/sevonj/sfontplayer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# -- GUI
eframe = { version = "0.30.0", features = ["persistence"] } # GUI Framework
egui_extras = { version = "0.29.1", features = [
    "all_loaders",
] } # Extra gui components
rfd = "0.15.1" # File dialog
egui-notify = { git = "https://github.com/ItsEthra/egui-notify.git", rev = "2fbf8da" } # toasts

# -- Persistence
serde = { version = "1.0.216", features = ["derive"] } # Remember app state
serde_repr = "0.1.19"

# -- Audio
rodio = "0.20.1"      # Audio
rustysynth = "1.3.2"  # midi
midi-msg = "0.7.5"    # midi types

# -- Misc
rand = "0.8.5"
build-info = "0.0.39" # For dependency listing
walkdir = "2.5.0"
size_format = "1.0.2" # File sizes into string
open = "5.3.1"        # Open path in file exprorer
anyhow = "1.0.95"     # Errors
souvlaki = "0.7.3"    # Media control/metadata system integration
serde_json = "1.0.134"
directories = "5.0.1"
relative-path = "1.9.3"

[build-dependencies]
build-info-build = "0.0.39" # For dependency listing

[profile.release]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
unwrap_used = { level = "deny", priority = 10 }
# expect_used = { level = "deny", priority = 11 }
struct_excessive_bools = { level = "allow", priority = 12 }
similar_names = { level = "allow", priority = 13 }
